--- a/index.html
+++ b/index.html
@@ -1,27 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Calculator</title>
-	<style>
-		body {
-			font-family: Arial, sans-serif;
-			text-align: center;
-		}
-		input[type="button"] {
-			width: 50px;
-			height: 50px;
-			margin: 5px;
-			font-size: 18px;
-		}
-		input[type="text"] {
-			width: 200px;
-			height: 50px;
-			font-size: 18px;
-			text-align: right;
-			padding-right: 5px;
-			margin-bottom: 10px;
-		}
-	</style>
+	<meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="styles.css">
+	<title>JS-Calculator</title>
 </head>
 <body>
 	<h1>Calculator</h1>
@@ -43,20 +27,8 @@
 	<input type="button" value="=" onclick="calculate()"><br>
 	<input type="button" value="/" onclick="addToInput('/')">
 	<input type="button" value="C" onclick="clearInput()">
-	<script>
-		function addToInput(value) {
-			document.getElementById('result').value += value;
-		}
 
-		function calculate() {
-			var input = document.getElementById('result').value;
-			var result = eval(input);
-			document.getElementById('result').value = result;
-		}
 
-		function clearInput() {
-			document.getElementById('result').value = "";
-		}
-	</script>
+	<script src="script.js"></script>
 </body>
 </html>
