--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>JS-Calculator</title>
 </head>
 <body>
+	<div class="calcBody">
 	<h1>Calculator</h1>
 	<input type="text" id="result" readonly><br>
 	<input type="button" value="1" onclick="addToInput('1')">
@@ -22,12 +23,13 @@
 	<input type="button" value="8" onclick="addToInput('8')">
 	<input type="button" value="9" onclick="addToInput('9')">
 	<input type="button" value="*" onclick="addToInput('*')"><br>
-	<input type="button" value="0" onclick="addToInput('0')">
 	<input type="button" value="." onclick="addToInput('.')">
-	<input type="button" value="=" onclick="calculate()"><br>
-	<input type="button" value="/" onclick="addToInput('/')">
+	<input type="button" value="0" onclick="addToInput('0')">
+	<input type="button" value="/" onclick="addToInput('/')"><br>
 	<input type="button" value="C" onclick="clearInput()">
+	<input type="button" value="=" onclick="calculate()">
 
+	</div>
 
 	<script src="script.js"></script>
 </body>
